# rust_os

./: Cargo.toml  README.md  readme.txt  x86_64-rust_os.json
.cargo/: config.toml
src/: gdt.rs  interrupts.rs  lib.rs  main.rs  serial.rs  vga_buffer.rs
tests/: basic_boot.rs  stack_overflow.rs
