[package]
name = "rust_os"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


# added per rust_os blog instructions


[dependencies]
bootloader = "0.9"
volatile = "0.2.6"
spin = "0.5.2"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

[package.metadata.bootimage]
build-command = ["build"]
run-command = ["C:/msys64/mingw64/bin/qemu-system-x86_64.exe", "-drive", "format=raw,file={}"]